--- a/0525.ipynb
+++ b/0525.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWQX6LquH/qinf62UL4CC7",
+      "authorship_tag": "ABX9TyNeAHRvoywquLmh/55u9k3c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +33,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "P_a7ajyQaZ5y",
-        "outputId": "b3172ac5-0362-4776-8ecc-4620a7de344d"
+        "id": "XbVneQTKb7cd",
+        "outputId": "2f077684-ff6b-4d87-f83e-01c8e53984b4"
       },
       "outputs": [
         {
@@ -63,8 +63,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oelKMnqXanTM",
-        "outputId": "822be74b-6fcf-46bc-fc05-22d078bdc8b7"
+        "id": "ofrbyppkcBBu",
+        "outputId": "4a3216f8-df4f-4e3d-e642-33e02e6992eb"
       },
       "execution_count": 2,
       "outputs": [
@@ -85,15 +85,14 @@
         "for i in range(1,n+1):\n",
         "  total+=i\n",
         "  p_sum=sum(range(1,i+1))\n",
-        "  print(\"1到%d的總和為: %d\" % (i,p_sum))\n",
-        "     "
+        "  print(\"1到%d的總和為: %d\" % (i,p_sum))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "i8ZSdMJxavRI",
-        "outputId": "afa4d96a-2f32-44db-e8b1-0a895f54e728"
+        "id": "OK5Z5ffpcGJr",
+        "outputId": "9ee10180-5833-4daf-a9a0-8c5bd2961e76"
       },
       "execution_count": 3,
       "outputs": [
@@ -129,8 +128,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kAcJpOSPa0Fz",
-        "outputId": "7d49c87a-d431-404a-db13-c3dc8a7c7e74"
+        "id": "4OcJ_avVcXiX",
+        "outputId": "2053b770-f280-409c-8cd5-9d2a3adefd42"
       },
       "execution_count": 4,
       "outputs": [
@@ -151,14 +150,14 @@
         "for i in range(1,n+1):\n",
         "  for j in range(i):\n",
         "    print(\"*\",end=\" \")\n",
-        "  print()"
+        "  print()     "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZKqgGzWJa9EA",
-        "outputId": "e258ad23-6d4c-4362-a0da-6e308af23956"
+        "id": "asnBn_Lncbf4",
+        "outputId": "2be44cba-a5b6-4e93-9593-053a7909656c"
       },
       "execution_count": 5,
       "outputs": [
@@ -166,12 +165,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入整數: 5\n",
+            "請輸入整數: 6\n",
             "* \n",
             "* * \n",
             "* * * \n",
             "* * * * \n",
-            "* * * * * \n"
+            "* * * * * \n",
+            "* * * * * * \n"
           ]
         }
       ]
@@ -189,8 +189,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Wnj0NAhBbImg",
-        "outputId": "52986b78-f92d-4d56-ef4c-f0f7c2cb10d3"
+        "id": "5zgWUz0jcfH6",
+        "outputId": "9cbbc9a2-a722-4c4d-9493-09b01d55a771"
       },
       "execution_count": 6,
       "outputs": [
@@ -198,12 +198,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入整數: 5\n",
+            "請輸入整數: 4\n",
             "1 \n",
             "1 2 \n",
             "1 2 3 \n",
-            "1 2 3 4 \n",
-            "1 2 3 4 5 \n"
+            "1 2 3 4 \n"
           ]
         }
       ]
@@ -220,8 +219,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HLKpFsqBbN8K",
-        "outputId": "cfb4ac94-13d7-4fc6-8212-bce29b029eec"
+        "id": "7c_-wdWwcirk",
+        "outputId": "b777a06d-f49e-4442-b237-672eb9e8993f"
       },
       "execution_count": 7,
       "outputs": [
@@ -229,24 +228,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入整數: 5\n",
-            "     *\n",
-            "    **\n",
-            "   ***\n",
-            "  ****\n",
-            " *****\n"
+            "請輸入整數: 7\n",
+            "       *\n",
+            "      **\n",
+            "     ***\n",
+            "    ****\n",
+            "   *****\n",
+            "  ******\n",
+            " *******\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6FCzWvBmbR_U"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
